--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -41,10 +41,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 293
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "e9c5efe1-82a3-43ab-e8d7-6d01e4fa3514"
+        "outputId": "4b6b1975-6b21-4d50-a503-86c4a822025e"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d6716f8f-4eba-40dc-a953-76eb8f4ef3ba\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cad12d1b-aea5-4e02-b5c1-8478eecdb40d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d6716f8f-4eba-40dc-a953-76eb8f4ef3ba')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cad12d1b-aea5-4e02-b5c1-8478eecdb40d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d6716f8f-4eba-40dc-a953-76eb8f4ef3ba button.colab-df-convert');\n",
+              "        document.querySelector('#df-cad12d1b-aea5-4e02-b5c1-8478eecdb40d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d6716f8f-4eba-40dc-a953-76eb8f4ef3ba');\n",
+              "        const element = document.querySelector('#df-cad12d1b-aea5-4e02-b5c1-8478eecdb40d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9c4378bf-b9bb-4cf8-91bd-20d40cd522f4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9c4378bf-b9bb-4cf8-91bd-20d40cd522f4')\"\n",
+              "<div id=\"df-659fb53c-c198-47a2-afa0-3f2f7e57d970\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-659fb53c-c198-47a2-afa0-3f2f7e57d970')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9c4378bf-b9bb-4cf8-91bd-20d40cd522f4 button');\n",
+              "        document.querySelector('#df-659fb53c-c198-47a2-afa0-3f2f7e57d970 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 5
         }
       ],
       "source": [
@@ -443,7 +443,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "suma_total_tienda1 = tienda[\"Precio\"].sum()"
+      ],
       "metadata": {
         "id": "xykobSftV64I"
       },
@@ -452,12 +454,166 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(f\"Ingreso total de la tienda 1: {suma_total_tienda1}\")\n"
+      ],
       "metadata": {
-        "id": "KDyr8E71V3m-"
+        "id": "KDyr8E71V3m-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "899cf066-ef22-4501-fe1c-74d3c4ae5043"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingreso total de la tienda 1: 1150880400.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "suma_total_tienda2 = tienda2[\"Precio\"].sum()"
+      ],
+      "metadata": {
+        "id": "chtWgvYJhyF5"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Ingreso total de la tienda 2: {suma_total_tienda2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iJtjD53Hh78D",
+        "outputId": "3a824c09-8403-4b01-fb1e-b4eb541e2402"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingreso total de la tienda 2: 1116343500.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "suma_total_tienda3 = tienda3[\"Precio\"].sum()"
+      ],
+      "metadata": {
+        "id": "DpYzL_TAiCqW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Ingreso total de la tienda 3: {suma_total_tienda3}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xzvzv_iPiDSY",
+        "outputId": "1b5dcc01-a705-4477-d876-ad9544e68287"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingreso total de la tienda 3: 1098019600.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "suma_total_tienda4 = tienda4[\"Precio\"].sum()"
+      ],
+      "metadata": {
+        "id": "esTcCJvyiDdQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Ingreso total de la tienda 4: {suma_total_tienda4}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U-6RdYtRiD5q",
+        "outputId": "766267a0-af08-4563-ff34-86238a8ba3a2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingreso total de la tienda 4: 1038375700.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# lista con los ingresos de las tiendas\n",
+        "ingresos = [suma_total_tienda1, suma_total_tienda2, suma_total_tienda3, suma_total_tienda4]\n",
+        "\n",
+        "# lista con los nombres de las tiendas\n",
+        "tiendas = [\"Tienda 1\", \"Tienda 2\", \"Tienda 3\", \"Tienda 4\"]\n",
+        "\n",
+        "# Determinar el menor ingreso y su índice\n",
+        "menor_ingreso = min(ingresos)\n",
+        "indice_menor = ingresos.index(menor_ingreso)\n",
+        "\n",
+        "# Identificar la tienda con menor ingreso\n",
+        "tienda_menor = tiendas[indice_menor]\n",
+        "\n",
+        "# Mostrar resultados\n",
+        "print(f\"\\nLa tienda con el menor ingreso es: {tienda_menor} con un ingreso de {menor_ingreso}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aCqMhPk9jtuJ",
+        "outputId": "b88fe983-4fb1-481b-bfb7-ac95fb676596"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "La tienda con el menor ingreso es: Tienda 4 con un ingreso de 1038375700.0\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -466,6 +622,15 @@
       ],
       "metadata": {
         "id": "2V_vcAPzWZmR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "calcular la cantidad de productos vendidos por categoría en cada tienda. La idea es agrupar los datos por categoría y contar el número de ventas de cada tipo, mostrando las categorías más populares de cada tienda."
+      ],
+      "metadata": {
+        "id": "A3YmdmTetehg"
       }
     },
     {
