--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -449,7 +449,7 @@
       "metadata": {
         "id": "xykobSftV64I"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -464,7 +464,7 @@
         },
         "outputId": "ba8b2d95-055d-43eb-d57f-83bc913fa301"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
       "metadata": {
         "id": "chtWgvYJhyF5"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -498,7 +498,7 @@
         "id": "iJtjD53Hh78D",
         "outputId": "dd94ac7f-6668-4516-e10b-6cfaf4df909e"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,7 +517,7 @@
       "metadata": {
         "id": "DpYzL_TAiCqW"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -532,7 +532,7 @@
         "id": "xzvzv_iPiDSY",
         "outputId": "45fd8c42-6392-49ae-d0cf-a25bafa9f616"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,7 +551,7 @@
       "metadata": {
         "id": "esTcCJvyiDdQ"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -566,7 +566,7 @@
         "id": "U-6RdYtRiD5q",
         "outputId": "4205e28f-d548-46f4-84a4-9a600a73a4e6"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +588,7 @@
       "metadata": {
         "id": "JD6O8LFCW2Cd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -630,7 +630,7 @@
       "metadata": {
         "id": "aCqMhPk9jtuJ"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -645,7 +645,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
       "metadata": {
         "id": "A34YupIuYhfF"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -701,7 +701,7 @@
       "metadata": {
         "id": "yZR6cOjXYSk1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -717,7 +717,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -773,7 +773,7 @@
       "metadata": {
         "id": "MiTzkZDZfUQy"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -795,7 +795,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -863,7 +863,7 @@
       "metadata": {
         "id": "bh3jjjJwY5MU"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -878,7 +878,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,13 +945,12 @@
         "    \"Tienda 2\": top_productos_menos_tienda2.index,\n",
         "    \"Tienda 3\": top_productos_menos_tienda3.index,\n",
         "    \"Tienda 4\": top_productos_menos_tienda4.index\n",
-        "})\n",
-        ""
+        "})\n"
       ],
       "metadata": {
         "id": "qoyjqijQZHfF"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -966,7 +965,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -994,7 +993,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1040,7 +1039,7 @@
       "metadata": {
         "id": "S2JeaCykZNy9"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1055,7 +1054,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,6 +1070,35 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6. Gráficos"
+      ],
+      "metadata": {
+        "id": "3FOixfrYu0zq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "6LP5O8DxvJ8k"
+      },
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MEkXd86fvQR2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
